name:                terminal-snake-hamilton
version:             0.1.0.0
synopsis:            Terminal snake game with Hamiltonian Path implemetation in Haskell
description:         See README at <https://github.com/letov/terminal-snake-hamilton>
license:             MIT
license-file:        LICENSE
author:              letov
maintainer:          -
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/letov/terminal-snake-hamilton

executable terminal-snake-hamilton
  main-is:             Snake.hs
  build-depends:       base >=4.12 && <4.13,
                       time >=1.8.0.2,
                       ansi-terminal >=0.11,
                       random >= 1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -main-is Snake

test-suite test-terminal-snake-hamilton
  main-is:             SnakeTest.hs
  other-modules:       Snake
  build-depends:       base >=4.12 && <4.13,
                       time >=1.8.0.2,
                       ansi-terminal >=0.11,
                       random >= 1.1,
                       HUnit
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
                       test
  default-language:    Haskell2010
  ghc-options:         -main-is SnakeTest